<resources>
    <string name="app_name">yazlab22</string>
    <string name="giristextView">HABER TÜRÜNÜ SEÇİNİZ</string>
    <string name="girisButton">HABERLERİ GÖRÜNTÜLE</string>

    <string-array name="girisSpinner">
        <item></item>
        <item>SonDakika</item>
        <item>Spor</item>
        <item>Siyaset</item>
        <item>Ekonomi</item>
        <item>Saglik</item>
        <item>Gundem</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewHaberBaslik">Haber Başlığı</string>
    <string name="textViewHaberİcerik">Haber İçeriği</string>
    <string name="textViewYayinTarihi">Yayın Tarihi</string>
    <string name="buttonBegenme">BEĞENME</string>
    <string name="buttonBegen">BEĞEN</string>
    <string name="textViewGoruntuSayisi">Görüntülenme Sayisi</string>

</resources>
