<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gosterme">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/gostermeLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gostermeimageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars[10]" />

            <TextView
                android:id="@+id/textViewHaberBaslik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textViewHaberBaslik" />

            <TextView
                android:id="@+id/textViewHaberBaslikYazi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/textViewHaberİcerik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textViewHaberİcerik" />

            <TextView
                android:id="@+id/textViewHaberİcerikYazi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/textViewYayinTarihi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textViewYayinTarihi" />

            <TextView
                android:id="@+id/textViewYayinTarihiYazi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/textViewGoruntuSayisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textViewGoruntuSayisi" />

            <TextView
                android:id="@+id/textViewGoruntuSayisiYazi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <Button
                android:id="@+id/buttonBegen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonBegen" />

            <Button
                android:id="@+id/buttonBegenme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonBegenme" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>